# Tallo

./: .appveyor.yml  .cirrus.yml  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  README.md
.github/workflows/: cmake.yml
cmake/: FindGFlags.cmake  FindMiniUPnPc.cmake  FindRocksDB.cmake  Findgflags.cmake
include/: BlockchainExplorerData.h  INode.h  IReadBatch.h  ITransfersContainer.h  IWallet.h  IWalletLegacy.h
scripts/: build-release.sh  easy_installer.sh  multi_installer.sh  nightly-build.sh
src/: CMakeLists.txt  CryptoNoteConfig.h  version.cmake  version.h.in
src/AddressGenerator/: main.cpp
src/BinaryInfo/: daemon.manifest.in  daemon.rc  generate.manifest.in  generate.rc  miner.manifest.in  miner.rc  simplewallet.manifest.in  simplewallet.rc  walletd.manifest.in  walletd.rc
src/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h
src/Common/: BlockingQueue.h  CommandLine.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  JsonValue.cpp  JsonValue.h  MemoryInputStream.cpp  MemoryInputStream.h  PathTools.cpp  ScopeExit.h  ShuffleGenerator.h  SignalHandler.h  StringBuffer.h  StringTools.cpp  StringTools.h  Util.cpp  Util.h  int-util.h
src/CryptoNoteCore/: AddBlockErrorCondition.h  BlockchainCache.cpp  BlockchainCache.h  BlockchainStorage.cpp  BlockchainStorage.h  CachedBlock.cpp  Checkpoints.cpp  Core.cpp  Core.h  CoreStatistics.h  CryptoNoteBasicImpl.h  CryptoNoteSerialization.cpp  CryptoNoteTools.h  Currency.cpp  Currency.h  DBUtils.cpp  DBUtils.h  DataBaseConfig.cpp  DatabaseBlockchainCache.cpp  DatabaseBlockchainCache.h  IBlockchainCache.h  ICoreInformation.h  IMainChainStorage.h  ITransactionPool.h  ITransactionValidator.h  IntrusiveLinkedList.h  MemoryBlockchainStorage.cpp  Miner.cpp  OnceInInterval.h  RocksDBWrapper.cpp  SwappedBlockchainStorage.cpp  SwappedVector.cpp  SwappedVector.h  Transaction.cpp  TransactionApiExtra.h  TransactionExtra.h  TransactionPool.cpp  TransactionPool.h  TransactionPoolCleaner.cpp  TransactionPoolCleaner.h  (+4 more)
src/CryptoNoteProtocol/: CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h  CryptoNoteProtocolHandlerCommon.h
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h
src/HTTP/: HttpParser.cpp  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
src/InProcessNode/: InProcessNode.cpp  InProcessNode.h
src/JsonRpcServer/: JsonRpcServer.cpp  JsonRpcServer.h
src/Logging/: CommonLogger.cpp  CommonLogger.h  LoggerMessage.cpp
src/Miner/: BlockchainMonitor.cpp  BlockchainMonitor.h  Miner.cpp  MinerManager.cpp  MinerManager.h  MiningConfig.cpp  MiningConfig.h  main.cpp
src/Mnemonics/: dutch.h  electrum-words.cpp  electrum-words.h  english.h  english_old.h  esperanto.h  german.h  italian.h  japanese.h  language_base.h  portuguese.h  russian.h  singleton.h  spanish.h
src/NodeRpcProxy/: NodeErrors.h  NodeRpcProxy.cpp  NodeRpcProxy.h  NodeRpcStub.cpp  NodeRpcStub.h
src/P2p/: ConnectionContext.h  LevinProtocol.cpp  LevinProtocol.h  NetNode.cpp  NetNode.h  NetNodeCommon.h  NetNodeConfig.cpp  P2pConnectionProxy.cpp  P2pContext.cpp  P2pContext.h  P2pNode.cpp  P2pNode.h  P2pProtocolDefinitions.h  P2pProtocolTypes.h  PeerListManager.cpp
src/PaymentGate/: NodeFactory.cpp  NodeFactory.h  PaymentServiceJsonRpcMessages.cpp  PaymentServiceJsonRpcMessages.h  PaymentServiceJsonRpcServer.cpp  PaymentServiceJsonRpcServer.h  WalletService.cpp  WalletService.h
src/PaymentGateService/: ConfigurationManager.cpp  ConfigurationManager.h  PaymentGateService.cpp  PaymentGateService.h  PaymentServiceConfiguration.cpp  PaymentServiceConfiguration.h  RpcNodeConfiguration.cpp  RpcNodeConfiguration.h  main.cpp
src/Rpc/: CoreRpcServerCommandsDefinitions.h  CoreRpcServerErrorCodes.h  HttpClient.cpp  HttpClient.h  HttpRootCerts.h  HttpServer.cpp  HttpServer.h  JsonRpc.h  RpcServer.cpp  RpcServer.h  RpcServerConfig.cpp  RpcServerConfig.h
src/Serialization/: BinarySerializationTools.h  ISerializer.h  JsonInputValueSerializer.cpp  KVBinaryCommon.h  KVBinaryOutputStreamSerializer.cpp  SerializationOverloads.cpp  SerializationOverloads.h  SerializationTools.h
src/SimpleWallet/: Cursor.h  ParseArguments.cpp  ParseArguments.h  PasswordContainer.h  SimpleWallet.cpp  SimpleWallet.h  SubWallet.cpp  SubWallet.h  Tools.cpp  Tools.h  Transfer.cpp  Transfer.h
src/System/: Context.h  ContextGroupTimeout.h  Event.cpp  PortMapping.cpp  PortMapping.h  SocketStream.cpp  SocketStream.h
src/Transfers/: BlockchainSynchronizer.cpp  SynchronizationState.cpp  SynchronizationState.h  TransfersConsumer.cpp  TransfersConsumer.h  TransfersContainer.cpp  TransfersContainer.h  TransfersSynchronizer.cpp  TransfersSynchronizer.h
src/Wallet/: WalletGreen.cpp  WalletGreen.h  WalletRpcServer.cpp  WalletSerializationV1.h  WalletSerializationV2.h
src/WalletLegacy/: KeysStorage.h  WalletLegacy.cpp  WalletLegacy.h  WalletLegacySerializer.cpp  WalletTransactionSender.cpp  WalletUnconfirmedTransactions.cpp  WalletUnconfirmedTransactions.h  WalletUserTransactionsCache.cpp
src/crypto/: chacha8.cpp  chacha8.h  crypto.cpp  crypto.h  hash-ops.h  hash.h  oaes_lib.c  slow-hash-arm.c  slow-hash-common.h  slow-hash-portable.c  tree-hash.c  variant2_int_sqrt.h
tests/: CMakeLists.txt
tests/CoreTests/: BlockValidation.h  ChainSplit1.cpp  ChainSplit1.h  Chaingen.h  Chaingen001.h  IntegerOverflow.h  RandomOuts.h  RingSignature.h  TestGenerator.h  TransactionTests.h  Upgrade.h
tests/Difficulty/: Difficulty.cpp
tests/Hash/: main.cpp  tests-cn-turtle-v2.txt
tests/IntegrationTestLib/: BaseFunctionalTests.cpp  BaseFunctionalTests.h  InProcTestNode.cpp  Logger.h  NodeObserver.h  Process.cpp  RPCTestNode.cpp  TestNetwork.cpp  TestWalletLegacy.cpp
tests/IntegrationTests/: IntegrationTests.cpp  MultiVersion.cpp  Node.cpp  WalletLegacyObserver.h  WalletLegacyTests.cpp  main.cpp
tests/NodeRpcProxyTests/: NodeRpcProxyTests.cpp
tests/PerformanceTests/: CryptoNoteSlowHash.h  PerformanceUtils.h
tests/System/: ContextGroupTests.cpp  ContextTests.cpp  DispatcherTests.cpp  EventLockTests.cpp  (+9 more)
(+60 files in other folders)
